Fix jump link spacing issues

--- a/app/assets/stylesheets/users/user_profile.scss
+++ b/app/assets/stylesheets/users/user_profile.scss
@@ -24,7 +24,8 @@
 }
 
 .except-user-anchor {
-  // margin-top: -303px;
+    width: 100%;
+    justify-content: center;
     margin-left: 51px;
     display: flex;
 }
